# embedding-api

./: CLAUDE.md  README.md  config.py  main.py  model.py  pyproject.toml  requirements.txt
benchmark/: embedding-bench-fix.py  embedding-bench-retry.py  embedding-bench.py  results.json
