[project]
name = "embedding-api"
version = "2.0.0"
description = "OpenAI-compatible self-hosted embedding API with BGE-M3 (dense + sparse + ColBERT)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Pavel Valentov" },
]
keywords = ["embeddings", "bge-m3", "dense", "sparse", "colbert", "openai-compatible"]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.0",
    "FlagEmbedding>=1.3",
    "psutil>=5.9",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
